<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".RegistrationActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="20dp">

        <RelativeLayout
            android:id="@+id/logoWrapper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="60dp"
            android:orientation="vertical">

            <ImageView
                android:layout_centerHorizontal="true"
                android:id="@+id/logo"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/ic_baseline_done_all_64" />

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_below="@id/logo"
                android:layout_height="wrap_content"
                android:text="Do it"
                android:textColor="@color/white"
                android:textSize="22dp" />
        </RelativeLayout>

        <EditText
            android:id="@+id/regEmail"
            android:textColorHint="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/field"
            android:hint="@string/hint_e_mail"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/mainColor"
            android:layout_below="@+id/logoWrapper"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/regPassword"
            android:layout_width="match_parent"
            android:textColorHint="@color/gray"
            android:layout_height="50dp"
            android:layout_below="@+id/regEmail"
            android:layout_marginTop="25dp"
            android:background="@drawable/field"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/mainColor"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/regRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textColorHint="@color/gray"
            android:layout_below="@+id/regPassword"
            android:layout_marginTop="25dp"
            android:background="@drawable/field"
            android:hint="@string/hint_repeat_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/mainColor"
            android:textSize="18sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/regBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/regRepeatPassword"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/field"
            android:text="@string/reg_sing_up"
            android:textAllCaps="false"
            android:textColor="@color/mainColor"
            android:textSize="18sp"
            app:backgroundTint="@color/white" />

        <TextView
            android:id="@+id/linkToLogin"
            android:layout_centerHorizontal="true"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lint_to_login"
            android:layout_below="@id/regBtn"
            android:textSize="16dp"
            android:layout_marginTop="10dp" />


    </RelativeLayout>


</RelativeLayout>