<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    >

    <LinearLayout
        android:id="@+id/titleApp"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/todo_list"
            android:layout_weight="1"
            android:textColor="@color/mainColor"
            android:textSize="28sp"
            />

        <ImageButton
            android:id="@+id/singOut"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/field"
            android:baselineAlignBottom="false"
            android:src="@drawable/ic_baseline_exit_to_app_24" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchForm"
        android:layout_below="@id/titleApp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/field"
        android:layout_marginBottom="5dp"
        android:paddingHorizontal="10dp"
        >
        <EditText
            android:id="@+id/searchFormInput"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:textColor="@color/gray2"
            android:padding="3dp"
            android:textColorHint="@color/gray2"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            android:hint="@string/hint_search" />
            />
        <ImageButton
            android:id="@+id/searchFormBtn"
            android:background="@android:color/transparent"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:src="@drawable/ic_baseline_search_24"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerToDoList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchForm"
        android:layout_alignParentStart="true"
        android:nestedScrollingEnabled="true"
        />

    <RelativeLayout
        android:id="@+id/emptyTodo"
        android:layout_width="wrap_content"
        android:layout_below="@+id/searchForm"
        android:layout_marginTop="50dp"
        android:alpha="0"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/emptyImage"
            android:layout_width="100dp"
            android:layout_centerHorizontal="true"
            android:layout_height="100dp"
            android:src="@drawable/empty_gray"/>

        <TextView
            android:id="@+id/emptyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/emptyImage"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:textColor="@color/gray2"
            android:text="@string/todo_list_empty"
            />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/mainColor"
        android:layout_margin="32dp"
        android:src="@drawable/ic_baseline_add_24"
        android:contentDescription="Add todo" />
</RelativeLayout>